# nia_server

./: Cargo.toml  build.rs  rustfmt.toml
keyboard_models/: Corsair Gaming K95 RGB PLATINUM Keyboard.kbm  default.kbm
keyboard_models2/: Corsair Gaming K95 RGB PLATINUM Keyboard.kbm  Logitech.kbm  test.kbm
src/: main.rs
src/commands/: get_device_info.rs  get_devices.rs  mod.rs
src/error/: mod.rs
src/event_handler/: action.rs  mod.rs  nia_event_handler.rs
src/protocol/: get_request_type.rs  mod.rs  request_type.rs
src/protocol/domain/: convertable.rs  mod.rs  serializable.rs
src/protocol/model/: device_info.rs  mod.rs  modifier.rs
src/protocol/request/: change_mapping_request.rs  define_action_request.rs  define_device_request.rs  define_keyboard_request.rs  define_mapping_request.rs  define_modifier_request.rs  execute_code_request.rs  get_defined_actions_request.rs  get_defined_mappings_request.rs  get_defined_modifiers_request.rs  get_device_info_request.rs  get_devices_request.rs  handshake_request.rs  is_listening_request.rs  mod.rs  remove_action_request.rs  remove_device_by_id_request.rs  remove_device_by_name_request.rs  remove_device_by_path_request.rs  remove_keyboard_by_name_request.rs  remove_keyboard_by_path_request.rs  remove_mapping_request.rs  remove_modifier_request.rs  request.rs  start_listening_request.rs  stop_listening_request.rs
src/protocol/response/: change_mapping_response.rs  define_action_response.rs  define_device_response.rs  define_keyboard_response.rs  define_mapping_response.rs  define_modifier_response.rs  execute_code_response.rs  get_defined_actions_response.rs  get_defined_mappings_response.rs  get_defined_modifiers_response.rs  get_device_info_response.rs  get_devices_response.rs  (+14 more)
src/server/: mod.rs  utils.rs
src/utils/: get_device_info.rs  get_devices.rs
(+39 files in other folders)
